--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,9 +26,11 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
 
     // RxJava
     implementation 'io.reactivex.rxjava2:rxjava:2.1.14'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
 
     // Retrofit
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
